Fixed font-awesome + some layout issues

--- a/public/stylesheets/custom-variables.less
+++ b/public/stylesheets/custom-variables.less
@@ -3,13 +3,13 @@
 //@panel-primary-border:        #2d4;
 
 @sidebar-color:                 lighten(black, 15%);
-@sidebar-bg:                    lighten(@brand-primary, 20%);
+@sidebar-bg:                    #fff;
 @sidebar-border:                @brand-primary;
 
 @sidebar-inner-border:          #999;
 @sidebar-border-radius:         @border-radius-base;
 
-@sidebar-hover-color:           red;
+@sidebar-hover-color:           blue;
 @sidebar-hover-bg:              #f5f5f5;
 @sidebar-hover-border:          #5f5f5f;
 
